<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="prompt_neutral">OK</string>
    <string name="prompt_negative">Cancel</string>
    <string name="bottom_nav_category_1">Search</string>
    <string name="bottom_nav_category_2">Create</string>
    <string name="bottom_nav_category_3">Estates</string>
    <string name="bottom_nav_category_4">Tools</string>
    <string name="bottom_nav_category_5">Map</string>
    <string name="energy_class_awaiting">Awaiting input…</string>
    <string name="energy_rating_a">Excellent energy performance</string>
    <string name="energy_rating_b">Very good energy performance</string>
    <string name="energy_class_c">Good energy performance</string>
    <string name="energy_class_d">Fair energy performance</string>
    <string name="energy_class_e">Average energy performance</string>
    <string name="energy_class_f">Below average performance</string>
    <string name="energy_class_g">Poor energy performance</string>
    <string name="icon_add_picture">Add picture icon</string>
    <string name="icon_agent">Agent icon</string>
    <string name="icon_bank">Bank icon</string>
    <string name="icon_bathroom">Bathroom icon</string>
    <string name="icon_bedroom">Bedroom icon</string>
    <string name="icon_calendar">Calendar icon</string>
    <string name="icon_chart_pie">Chart pie icon</string>
    <string name="icon_chevron_double_down">Chevron double down icon</string>
    <string name="icon_chevron_double_left">Chevron double left icon</string>
    <string name="icon_chevron_double_right">Chevron double right icon</string>
    <string name="icon_chevron_double_up">Chevron double up icon</string>
    <string name="icon_chevron_down_box">Chevron down box icon</string>
    <string name="icon_circle_medium">Circle medium icon</string>
    <string name="icon_currency">Currency icon</string>
    <string name="icon_database_refresh">Database refresh icon</string>
    <string name="icon_database_save">Database save icon</string>
    <string name="icon_delete">Delete icon</string>
    <string name="icon_description_edit">Description edit icon</string>
    <string name="icon_description">Description icon</string>
    <string name="icon_dev">Dev icon</string>
    <string name="icon_disabled_accessibility">Disabled accessibility icon</string>
    <string name="icon_energy_rating_a">Energy rating A icon</string>
    <string name="icon_energy_rating_b">Energy rating B icon</string>
    <string name="icon_energy_rating_c">Energy rating C icon</string>
    <string name="icon_energy_rating_d">Energy rating D icon</string>
    <string name="icon_energy_rating_e">Energy rating E icon</string>
    <string name="icon_energy_rating_f">Energy rating F icon</string>
    <string name="icon_energy_rating_g">Energy rating G icon</string>
    <string name="icon_energy">Energy icon</string>
    <string name="icon_equal">Equal icon</string>
    <string name="icon_estate_edit">Estate edit icon</string>
    <string name="icon_estate_plus">Estate plus icon</string>
    <string name="icon_estate_search">Estate search icon</string>
    <string name="icon_estates">Estates icon</string>
    <string name="icon_furnished">Furnished icon</string>
    <string name="icon_garden">Garden icon</string>
    <string name="icon_help">Help icon</string>
    <string name="icon_high_speed_internet">High-speed internet icon</string>
    <string name="icon_labels">Labels icon</string>
    <string name="icon_latitude">Latitude icon</string>
    <string name="icon_longitude">Longitude icon</string>
    <string name="icon_map_marker_multiple">Map marker multiple icon</string>
    <string name="icon_map_marker">Map marker icon</string>
    <string name="icon_map">Map icon</string>
    <string name="icon_miscellaneous">Miscellaneous icon</string>
    <string name="icon_names.txt">Names icon</string>
    <string name="icon_nearby_places">Nearby places icon</string>
    <string name="icon_overview">Overview icon</string>
    <string name="icon_percent">Percent icon</string>
    <string name="icon_picture_multiple">Picture multiple icon</string>
    <string name="icon_picture">Picture icon</string>
    <string name="icon_piggy_bank">Piggy bank icon</string>
    <string name="icon_quick_search">Quick search icon</string>
    <string name="icon_remove_picture">Remove picture icon</string>
    <string name="icon_room">Room icon</string>
    <string name="icon_sold">Sold icon</string>
    <string name="icon_surface">Surface icon</string>
    <string name="icon_tools">Tools icon</string>
    <string name="icon_type">Type icon</string>
    <string name="icon_values">Values icon</string>
    <string name="icon_zipcode">Zipcode icon</string>
    <string name="defence_string">The first registered estate is worth\u0020</string>
    <string name="quick_search_hint">Quick search</string>
    <string name="results_hint_0">0 Estates found</string>
    <string name="results_hint_1">1 Estate found</string>
    <string name="results_hint">Estates found:</string>
    <string name="fragment_estates_text_emptyRecyclerView">Start by touching the CREATE icon.</string>
    <string name="fragment_details_hint_sold">was sold</string>
    <string name="fragment_details_hint_type">Type</string>
    <string name="fragment_details_added_date">Added date</string>
    <string name="fragment_details_hint_surface">Surface</string>
    <string name="fragment_details_hint_rooms">Rooms</string>
    <string name="details_energy_score">%1$s Kwh/m²/year</string>
    <string name="details_energy_hint">XXX Kwh/m²/year</string>
    <string name="fragment_details_hint_price">Price</string>
    <string name="fragment_details_hint_bedrooms">Bedrooms</string>
    <string name="fragment_details_hint_bathrooms">Bathrooms</string>
    <string name="fragment_details_hint_highSpeedInternet">Internet</string>
    <string name="fragment_details_hint_energy">Energy</string>
    <string name="fragment_details_hint_static_map">Static map</string>
    <string name="fragment_details_placeholder_display_text">Oops, seems like there\'s nothing to see yet</string>
    <string name="fragment_details_placeholder_display_text_2">「Select」or「Create」an Estate</string>
    <string name="fragment_details_placeholder_icon">Estates</string>
    <string name="navigator_tools">Tools</string>
    <string name="item_estate_description_picture">Estate picture</string>
    <string name="item_estate_hint_energy">Energy</string>
    <string name="item_estate_hint_location">Location</string>
    <string name="item_estate_hint_price">Price</string>
    <string name="item_estate_hint_surface">Surface</string>
    <string name="item_estate_hint_rooms">Rooms</string>
    <string name="item_estate_hint_type">Type</string>
    <string name="item_agent_firstname">Firstname</string>
    <string name="item_agent_lastname">Lastname</string>
    <string name="item_agent_phone">Phone</string>
    <string name="item_agent_mail">Mail</string>
    <string name="item_agent_agency">Agency</string>
    <string name="item_step_description_picture">Step</string>
    <string name="create_title">「CREATE」</string>
    <string name="create_guideline">Proceed through 6 steps</string>
    <string name="create_guideline_secondary">Select a category</string>
    <string name="edit_title">「EDIT」</string>
    <string name="edit_subtitle">Estate n° %1$s</string>
    <string name="edit_guideline">Edit any values</string>
    <string name="layout_create_type_title">Type</string>
    <string name="layout_create_type_picture">Type icon</string>
    <string name="layout_create_address_title">Address</string>
    <string name="layout_create_address_picture">Address icon</string>
    <string name="layout_create_street_input_hint">Street</string>
    <string name="layout_create_zipCode_input_hint">Zip Code (ex. XXXXX)</string>
    <string name="layout_create_location_input_hint">Location (ex. Paris)</string>
    <string name="layout_create_latitude_input_hint">Latitude</string>
    <string name="layout_create_longitude_input_hint">Longitude</string>
    <string name="layout_create_description_high_speed_internet">High-speed internet</string>
    <string name="layout_create_description_input_hint">Description (max. 400 characters)</string>
    <string name="layout_create_main_picture_title">Picture</string>
    <string name="layout_create_main_picture_picture">Picture icon</string>
    <string name="layout_create_secondary_pictures_title">Pictures</string>
    <string name="layout_create_secondary_pictures_picture">Pictures icon</string>
    <string name="layout_create_agent_title">Agent</string>
    <string name="layout_create_agent_picture">Agent icon</string>
    <string name="layout_create_validate_title">Validate</string>
    <string name="layout_create_validate_picture">Validate icon</string>
    <string name="layout_create_validate_button">SAVE ESTATE</string>
    <string-array name="array_picture_selection">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string-array name="array_estate_type">
        <item>Bungalow</item>
        <item>Condominium</item>
        <item>Cottage</item>
        <item>Duplex</item>
        <item>Farmhouse</item>
        <item>Flat</item>
        <item>Lodge</item>
        <item>Manor</item>
        <item>Penthouse</item>
        <item>Townhouse</item>
        <item>Villa</item>
    </string-array>
    <string-array name="array_search_estate_type">
        <item><font fgcolor='#000000'>Any</font></item>
        <item><font fgcolor='#000000'>Bungalow</font></item>
        <item><font fgcolor='#000000'>Condominium</font></item>
        <item><font fgcolor='#000000'>Cottage</font></item>
        <item><font fgcolor='#000000'>Duplex</font></item>
        <item><font fgcolor='#000000'>Farmhouse</font></item>
        <item><font fgcolor='#000000'>Flat</font></item>
        <item><font fgcolor='#000000'>Lodge</font></item>
        <item><font fgcolor='#000000'>Manor</font></item>
        <item><font fgcolor='#000000'>Penthouse</font></item>
        <item><font fgcolor='#000000'>Townhouse</font></item>
        <item><font fgcolor='#000000'>Villa</font></item>
    </string-array>
    <string-array name="array_search_energy_score">
        <item>Any</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
    </string-array>
    <string-array name="array_search_choices">
        <item>Both</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="array_search_available">
        <item>Both</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="hint_agent">Agent</string>
    <string name="hint_type">Type</string>
    <string name="hint_values">Values</string>
    <string name="hint_energy">Energy score</string>
    <string name="hint_picture">Picture</string>
    <string name="hint_secondary_pictures">Secondary Picture(s)</string>
    <string name="hint_preview">Preview</string>
    <string name="hint_description">Description</string>
    <string name="hint_misc">Misc.</string>
    <string name="hint_address">Address</string>
    <string name="hint_street">Street</string>
    <string name="hint_zipCode">Zip Code (ex. XXXXX)</string>
    <string name="layout_create_date_picture">Date icon</string>
    <string name="layout_create_date_title">Current date</string>
    <string name="layout_create_date_hint">dd/mm/yyyy</string>
    <string name="fragment_dev_button_deleteAll_text">Delete all</string>
    <string name="fragment_dev_button_addOneRandom_text">+1 random Estate</string>
    <string name="fragment_dev_button_addThousandRandom_text">+1000 random Estate</string>
    <string name="fragment_dev_button_addTenThousandRandom_text">+10000 random Estate</string>
</resources>