<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="createViewModel"
            type="com.oxymium.realestatemanager.viewmodel.CreateViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/independence"
        tools:context=".DevFragment">

        <Button
            android:id="@+id/fragment_dev_addOne_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_dev_button_addOneRandom_text"
            android:onClick="@{() -> createViewModel.onClickAddOneButton()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_dev_addThousand_button"
            />

        <Button
            android:id="@+id/fragment_dev_addThousand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_dev_button_addThousandRandom_text"
            android:onClick="@{() -> createViewModel.onClickAddThousandButton()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dev_addOne_button"
            app:layout_constraintBottom_toTopOf="@+id/fragment_dev_addTenThousand_button"
            />

        <Button
            android:id="@+id/fragment_dev_addTenThousand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_dev_button_addTenThousandRandom_text"
            android:onClick="@{() -> createViewModel.onClickAddTenThousandButton()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dev_addThousand_button"
            app:layout_constraintBottom_toTopOf="@id/fragment_dev_deleteAll_button"
            />

        <Button
            android:id="@+id/fragment_dev_deleteAll_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_dev_button_deleteAll_text"
            android:onClick="@{() -> createViewModel.onClickDeleteAllButton()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_dev_addTenThousand_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>