<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="estate"
            type="com.oxymium.realestatemanager.model.Estate"/>
        <variable
            name="estateClickListener"
            type="com.oxymium.realestatemanager.utils.EstateListener"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/item_estate_bottom_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> estateClickListener.onClickEstate(estate)}"
            card_view:cardUseCompatPadding="true"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardElevation="3dp"
            card_view:cardMaxElevation="3dp"
            card_view:cardCornerRadius="5dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/item_estate_picture"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/item_estate_description_picture"
                    android:background="@color/space_cadet"
                    app:itemEstateSoldTint="@{estate.wasSold}"
                    android:src="@{estate.mainPicturePath}"
                    card_view:layout_constraintDimensionRatio="H,1:1"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <!-- Top part -->

                <View
                    android:id="@+id/item_estate_part_top"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="#7F000000"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintHeight_percent="0.1"
                    card_view:layout_constraintVertical_bias="0"
                    />

                <TextView
                    android:id="@+id/item_estate_surface"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(estate.surface + `m²`)}"
                    android:textSize="@dimen/item_estate_font_small"
                    android:textColor="@color/isabelline"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:hint="@string/item_estate_hint_surface"
                    android:textColorHint="@color/white"
                    card_view:layout_constraintStart_toStartOf="@id/item_estate_part_top"
                    card_view:layout_constraintEnd_toEndOf="@id/item_estate_part_top"
                    card_view:layout_constraintTop_toTopOf="@id/item_estate_part_top"
                    card_view:layout_constraintBottom_toBottomOf="@id/item_estate_part_top"
                    card_view:layout_constraintHorizontal_bias="0.05"
                    />

                <TextView
                    android:id="@+id/item_estate_energy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/item_estate_font_small"
                    app:itemEstateEnergyScoreTextColor="@{estate.energyScore}"
                    app:itemEstateEnergyScoreText="@{estate.energyScore}"
                    android:textColor="@color/isabelline"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:hint="@string/item_estate_hint_energy"
                    android:textColorHint="@color/white"
                    card_view:layout_constraintStart_toStartOf="@id/item_estate_part_top"
                    card_view:layout_constraintEnd_toEndOf="@id/item_estate_part_top"
                    card_view:layout_constraintTop_toTopOf="@id/item_estate_part_top"
                    card_view:layout_constraintBottom_toBottomOf="@id/item_estate_part_top"
                    />

                <TextView
                    android:id="@+id/item_estate_rooms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(estate.rooms) + `R`}"
                    android:textSize="@dimen/item_estate_font_small"
                    android:textColor="@color/isabelline"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:hint="@string/item_estate_hint_rooms"
                    android:textColorHint="@color/white"
                    card_view:layout_constraintStart_toStartOf="@id/item_estate_part_top"
                    card_view:layout_constraintEnd_toEndOf="@id/item_estate_part_top"
                    card_view:layout_constraintTop_toTopOf="@id/item_estate_part_top"
                    card_view:layout_constraintBottom_toBottomOf="@id/item_estate_part_top"
                    card_view:layout_constraintHorizontal_bias="0.95"
                    />

                <!-- Middle part -->
                <View
                    android:id="@+id/item_estate_part_middle"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="#7F000000"
                    app:layout_constraintStart_toStartOf="@id/item_estate_picture"
                    app:layout_constraintEnd_toEndOf="@id/item_estate_picture"
                    app:layout_constraintTop_toTopOf="@id/item_estate_picture"
                    card_view:layout_constraintBottom_toBottomOf="@id/item_estate_picture"
                    card_view:layout_constraintHeight_percent="0.25"
                    card_view:layout_constraintVertical_bias="1"
                    />

                <TextView
                    android:id="@+id/item_estate_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text='@{"$" + String.format("%,d", estate.price).replace(",", ".")}'
                    android:textSize="@dimen/item_estate_font_medium"
                    android:textColor="@color/yellow_500"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:hint="@string/item_estate_hint_price"
                    android:textColorHint="@color/white"
                    card_view:layout_constraintStart_toStartOf="@id/item_estate_part_middle"
                    card_view:layout_constraintEnd_toEndOf="@id/item_estate_part_middle"
                    card_view:layout_constraintTop_toTopOf="@id/item_estate_part_middle"
                    card_view:layout_constraintBottom_toBottomOf="@id/item_estate_part_middle"
                    />

                <!-- Bottom part -->
                <View
                    android:id="@+id/item_estate_part_bottom"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/independence"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@id/item_estate_picture"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintHeight_percent="0.25"
                    card_view:layout_constraintVertical_bias="1"
                    />

                <TextView
                    android:id="@+id/item_estate_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{estate.type}"
                    android:textSize="@dimen/item_estate_font_small"
                    android:textColor="@color/white"
                    android:textStyle="italic|bold"
                    android:textAlignment="center"
                    android:hint="@string/item_estate_hint_type"
                    android:textColorHint="@color/white"
                    card_view:layout_constraintStart_toStartOf="@id/item_estate_part_bottom"
                    card_view:layout_constraintEnd_toEndOf="@id/item_estate_part_bottom"
                    card_view:layout_constraintTop_toTopOf="@id/item_estate_part_bottom"
                    card_view:layout_constraintBottom_toTopOf="@id/item_estate_location"
                    />

                <TextView
                    android:id="@+id/item_estate_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{estate.location}"
                    android:textSize="@dimen/item_estate_font_small"
                    android:textColor="@color/isabelline"
                    android:textAlignment="center"
                    android:hint="@string/item_estate_hint_location"
                    android:textColorHint="@color/white"
                    card_view:layout_constraintStart_toStartOf="@id/item_estate_part_bottom"
                    card_view:layout_constraintEnd_toEndOf="@id/item_estate_part_bottom"
                    card_view:layout_constraintTop_toBottomOf="@id/item_estate_type"
                    card_view:layout_constraintBottom_toBottomOf="@id/item_estate_part_bottom"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>